--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 #Server configuration
-server.servlet.context-path=/SpringMVC
-spring.mvc.servlet.path=/servlet
 server.port=8080
 
 ### DATABASE ###
@@ -13,5 +11,5 @@ spring.datasource.password=
 ### JPA / HIBERNATE ###
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.dialect.storage_engine=innodb
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
